Finally .. first version .. offers simple key-value store under access key control

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -14,5 +14,14 @@
 %%    See the License for the specific language governing permissions and
 %%    limitations under the License.
 
+%% Show default page
 {[], cloudrover_default_resource, []}.
-{["base", accesskey, '*'], cloudrover_base_resource, []}.
+
+%% Set AccessKey, can only be set once, is immutable
+{["base", "key"], cloudrover_base_accesskey_resource, []}.
+
+%% Retrieve resources, no access to AccessKey
+{["base", "get", '*'], cloudrover_base_get_resource, []}.
+
+%% Set resources, requires AccessKey
+{["base", accesskey, '*'], cloudrover_base_set_resource, []}.
