work in progress

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -20,8 +20,12 @@
 %% Set AccessKey, can only be set once, is immutable
 {["base", "key"], cloudrover_base_accesskey_resource, []}.
 
+%% Updates itself, requires AccessKey
+{["base", accesskey, "update"], cloudrover_base_update_resource, []}.
+
 %% Retrieve resources, no access to AccessKey
 {["base", "get", '*'], cloudrover_base_get_resource, []}.
 
 %% Set resources, requires AccessKey
 {["base", accesskey, '*'], cloudrover_base_set_resource, []}.
+
