--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -20,6 +20,12 @@
 %% Set AccessKey, can only be set once, is immutable
 {["base", "key"], cloudrover_base_accesskey_resource, []}.
 
+%% Set URL for Git repository for CloudRover source, requires AccessKey
+{["base", accesskey, "gitsrc"], cloudrover_base_gitsrc_resource, []}.
+
+%% Set URL for Git repository for shell scripts, requires AccessKey
+{["base", accesskey, "gitsh"], cloudrover_base_gitsh_resource, []}.
+
 %% Updates itself, requires AccessKey
 {["base", accesskey, "update"], cloudrover_base_update_resource, []}.
 
