work in progress

--- a/priv/cloudrover.conf
+++ b/priv/cloudrover.conf
@@ -15,5 +15,6 @@
 %%    limitations under the License.
 
 {port, 8000}.
-{log_dir, "priv/log"}.
-{pid_file, "priv/log/cloudrover.pid"}.
+{log_dir,  "priv/log"}.
+{work_dir, "var/work"}.
+{pid_file, "var/cloudrover.pid"}.
