work in progress

--- a/priv/cloudrover.conf
+++ b/priv/cloudrover.conf
@@ -15,6 +15,6 @@
 %%    limitations under the License.
 
 {port, 8000}.
-{log_dir,  "priv/log"}.
-{work_dir, "var/work"}.
+{log_dir,  "priv/log/"}.
+{work_dir, "var/work/"}.
 {pid_file, "var/cloudrover.pid"}.
