--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -29,6 +29,9 @@
 %% Updates itself, requires AccessKey
 {["base", accesskey, "update"], cloudrover_base_update_resource, []}.
 
+%% Run shell-scripts
+{["base", accesskey, "sh"], cloudrover_base_sh_resource, []}.
+
 %% Retrieve resources, no access to AccessKey
 {["base", "get", '*'], cloudrover_base_get_resource, []}.
 
