Added upload functionality for RSA key

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -26,6 +26,9 @@
 %% Set URL for Git repository for shell scripts, requires AccessKey
 {["base", accesskey, "gitsh"], cloudrover_base_gitsh_resource, []}.
 
+%% Upload rsa key for Git repository for shell scripts, requires AccessKey
+{["base", accesskey, "rsa"], cloudrover_base_rsa_resource, []}.
+
 %% Updates itself, requires AccessKey
 {["base", accesskey, "update"], cloudrover_base_update_resource, []}.
 
