moved some directories

--- a/priv/cloudrover.conf
+++ b/priv/cloudrover.conf
@@ -16,6 +16,6 @@
 
 {port,     8000}.
 {log_dir,  "priv/log/"}.
-{work_dir, "var/work/"}.
-{pid_file, "var/cloudrover.pid"}.
+{work_dir, "priv/var/work/"}.
+{pid_file, "priv/var/cloudrover.pid"}.
 {git_ssh,  "git@github.com"}.
