Finally .. after fighting with SSH decided to go the URL route

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -20,24 +20,26 @@
 %% Set AccessKey, can only be set once, is immutable
 {["base", "key"], cloudrover_base_accesskey_resource, []}.
 
+
 %% Set URL for Git repository for CloudRover source, requires AccessKey
 {["base", accesskey, "gitsrc"], cloudrover_base_gitsrc_resource, []}.
-
-%% Set URL for Git repository for shell scripts, requires AccessKey
-{["base", accesskey, "gitsh"], cloudrover_base_gitsh_resource, []}.
-
-%% Upload rsa key for Git repository for shell scripts, requires AccessKey
-{["base", accesskey, "rsa"], cloudrover_base_rsa_resource, []}.
 
 %% Updates itself, requires AccessKey
 {["base", accesskey, "update"], cloudrover_base_update_resource, []}.
 
+
+%% Set URL for Git repository for shell scripts, requires AccessKey
+%% use https URL with username and password
+{["base", accesskey, "gitsh"], cloudrover_base_gitsh_resource, []}.
+
 %% Run shell-scripts
+%% GitSh has to be set
 {["base", accesskey, "sh"], cloudrover_base_sh_resource, []}.
 
-%% Retrieve resources, no access to AccessKey
-{["base", "get", '*'], cloudrover_base_get_resource, []}.
 
 %% Set resources, requires AccessKey
 {["base", accesskey, '*'], cloudrover_base_set_resource, []}.
+
+%% Retrieve resources, no access to AccessKey
+{["base", "get", '*'], cloudrover_base_get_resource, []}.
 
