oops .. sequence in pattern matching is still important

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -37,9 +37,10 @@
 {["base", accesskey, "sh"], cloudrover_base_sh_resource, []}.
 
 
-%% Set resources, requires AccessKey
-{["base", accesskey, '*'], cloudrover_base_set_resource, []}.
-
 %% Retrieve resources, no access to AccessKey
 {["base", "get", '*'], cloudrover_base_get_resource, []}.
+
+%% Set resources, requires AccessKey
+%% Has to be last in the list ..
+{["base", accesskey, '*'], cloudrover_base_set_resource, []}.
 
