Should have use URL encoded arguments in the first place

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -34,7 +34,7 @@
 
 %% Run shell-scripts
 %% GitSh has to be set
-{["base", accesskey, "sh"], cloudrover_base_sh_resource, []}.
+{["base", accesskey, "sh", groupname, scriptname], cloudrover_base_sh_resource, []}.
 
 
 %% Retrieve resources, no access to AccessKey
