--- a/priv/cloudrover.conf
+++ b/priv/cloudrover.conf
@@ -14,7 +14,11 @@
 %%    See the License for the specific language governing permissions and
 %%    limitations under the License.
 
-{port,     8000}.
+{port, 8000}.
+
 {log_dir,  "priv/log/"}.
 {work_dir, "priv/var/work/"}.
 {pid_file, "priv/var/cloudrover.pid"}.
+
+{bootstrap_shutdown_cmd, "shutdown"}.
+{bootstrap_timeout_secs, 30}.
