Shutdown manager .. work in progress

--- a/priv/cloudrover.conf
+++ b/priv/cloudrover.conf
@@ -20,5 +20,5 @@
 {work_dir, "priv/var/work/"}.
 {pid_file, "priv/var/cloudrover.pid"}.
 
-{bootstrap_shutdown_cmd, "shutdown"}.
+{bootstrap_shutdown_cmd, "shutdown -h now"}.
 {bootstrap_timeout_secs, 30}.
