Added keep_alive handling

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -30,6 +30,10 @@
 {["base", accesskey, "sh", groupname, scriptname], cloudrover_wm_sh_resource, []}.
 
 
+%% Keep alive URL
+{["base", accesskey, "keepalive"], cloudrover_wm_keep_alive, []}.
+
+
 %% Retrieve resources, no access to AccessKey
 {["base", "get", '*'], cloudrover_wm_get_resource, []}.
 
